# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.1].define(version: 2026_07_04_111555) do
+ActiveRecord::Schema[8.1].define(version: 2026_07_04_114207) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -56,8 +56,12 @@ ActiveRecord::Schema[8.1].define(version: 2026_07_04_111555) do
     t.datetime "updated_at", null: false
     t.bigint "user_id", null: false
     t.string "visibility", default: "active", null: false
+    t.boolean "won_deployment_roll", default: false, null: false
+    t.boolean "won_role_roll", default: false, null: false
     t.index ["game_id", "user_id"], name: "index_game_players_on_game_id_and_user_id", unique: true
     t.index ["game_id"], name: "index_game_players_on_game_id"
+    t.index ["game_id"], name: "index_game_players_on_game_id_where_won_deployment_roll", unique: true, where: "won_deployment_roll"
+    t.index ["game_id"], name: "index_game_players_on_game_id_where_won_role_roll", unique: true, where: "won_role_roll"
     t.index ["list_id"], name: "index_game_players_on_list_id"
     t.index ["user_id"], name: "index_game_players_on_user_id"
   end
@@ -65,17 +69,13 @@ ActiveRecord::Schema[8.1].define(version: 2026_07_04_111555) do
   create_table "games", force: :cascade do |t|
     t.string "board_size"
     t.datetime "created_at", null: false
-    t.bigint "deployment_roll_winner_id"
     t.integer "ducat_limit", null: false
     t.string "join_code", null: false
     t.string "name"
-    t.bigint "role_roll_winner_id"
     t.bigint "scenario_id", null: false
     t.string "status", default: "pending", null: false
     t.datetime "updated_at", null: false
-    t.index ["deployment_roll_winner_id"], name: "index_games_on_deployment_roll_winner_id"
     t.index ["join_code"], name: "index_games_on_join_code", unique: true
-    t.index ["role_roll_winner_id"], name: "index_games_on_role_roll_winner_id"
     t.index ["scenario_id"], name: "index_games_on_scenario_id"
   end
 
@@ -221,8 +221,6 @@ ActiveRecord::Schema[8.1].define(version: 2026_07_04_111555) do
   add_foreign_key "game_players", "games"
   add_foreign_key "game_players", "lists"
   add_foreign_key "game_players", "users"
-  add_foreign_key "games", "game_players", column: "deployment_roll_winner_id"
-  add_foreign_key "games", "game_players", column: "role_roll_winner_id"
   add_foreign_key "games", "scenarios"
   add_foreign_key "illustrations", "profiles"
   add_foreign_key "list_entries", "lists"
